Add search console.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="canonical" href="https://seovale.com.br" />
     <link rel="stylesheet" href="css/reset.min.css" />
     <link rel="stylesheet" href="css/home.min.css" />
+    <meta name="google-site-verification" content="ywCxV15pVb1U8lxsW9keGge0dHZeRsQzkVWzi8KsooU" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149433070-1"></script>
     <script src="js/google-analytics.min.js"></script>
 </head>
