Add google tag manager; Remove GA;

--- a/index.html
+++ b/index.html
@@ -27,10 +27,19 @@
     <link rel="canonical" href="https://seovale.com.br" />
     <link rel="stylesheet" href="css/reset.min.css" />
     <link rel="stylesheet" href="css/home.min.css" />
-    <meta name="google-site-verification" content="ywCxV15pVb1U8lxsW9keGge0dHZeRsQzkVWzi8KsooU" />
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149433070-1"></script>
-    <script src="js/google-analytics.min.js"></script>
+    <script>(function (w, d, s, l, i) {
+        w[l] = w[l] || []; w[l].push({
+            'gtm.start':
+                new Date().getTime(), event: 'gtm.js'
+        }); var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-NV8WB5G');
+    </script>
 </head>
 <body>
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NV8WB5G" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
 </body>
 </html>
