Add conteúdo inicial da home; Add tag manager na página de 404; Removido o arquivo de GA;

--- a/index.html
+++ b/index.html
@@ -41,5 +41,24 @@
     <noscript>
         <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NV8WB5G" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
+
+    <main>
+         <section class="cover">
+             <div class="cover-wrapper">
+                <h1 class="cover-title">
+                    <b class="ct-first">SEO</b>
+                    <b class="ct-last">Vale</b>
+                </h1>
+                <h2 class="cover-subtitle">Primeiro evento de <b class="fw-bold">SEO</b> no <b class="fw-bold">Vale do Paraíba</b>!</h2>
+                <p class="cover-info">Em abril de 2020.</p>
+            </div>
+        </section>
+
+        <section class="section-dark">
+            <h2 class="sd-title">A primeira edição do SEO Vale</h2>
+            <p class="sd-content">O SEO Vale reúne centenas de profissionais de diversas áreas como Marketing, Programação e Design no Vale do Paraíba, com intuito de discutir sobre técnicas de Search Engine Optimization.</p>
+            <br/><p class="sd-content">Mais informações em breve! <b class="fw-bold">#seovale</b></p>
+        </section>
+    </main>
 </body>
 </html>
