--- a/404.html
+++ b/404.html
@@ -5,11 +5,19 @@
     <meta name="robots" content="noindex, nofollow" />
     <meta name="googlebot" content="noindex, nofollow" />
     <meta http-equiv="refresh" content="0; url=/">
-    <script src="js/google-analytics.min.js"></script>
+    <script>(function (w, d, s, l, i) {
+        w[l] = w[l] || []; w[l].push({
+            'gtm.start':
+                new Date().getTime(), event: 'gtm.js'
+        }); var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-NV8WB5G');
+    </script>
 </head>
 <body>
-    <h1>Página movida para:
-        <a href="/">seovale.com.br</a>
-    </h1>
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NV8WB5G" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
 </body>
 </html>
