Add novo logo e ajustado as cores do tema.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="HandheldFriendly" content="true" />
     <meta name="MobileOptimized" content="480" />
     <meta name="format-detection" content="telephone=no" />
-    <meta name="theme-color" content="#C0CA33" />
+    <meta name="theme-color" content="#388E3C" />
     <meta property="og:url" content="https://seovale.com.br" />
     <link rel="canonical" href="https://seovale.com.br" />
     <link rel="stylesheet" href="css/reset.min.css" />
@@ -80,11 +80,8 @@
     <main>
          <section class="cover">
              <div class="cover-wrapper">
-                <h1 class="cover-title">
-                    <b class="ct-first">SEO</b>
-                    <b class="ct-last">Vale</b>
-                </h1>
-                <h2 class="cover-subtitle">Primeiro evento de <b class="fw-bold">SEO</b> no <b class="fw-bold">Vale do Paraíba</b>!</h2>
+                <img class="cover-logo" src="img/seovale.svg" alt="logo seo vale"></img>
+                <h1 class="cover-title">Primeiro evento de <b class="fw-bold">SEO</b> no <b class="fw-bold">Vale do Paraíba</b>!</h2>
                 <p class="cover-info">Em abril de 2020.</p>
             </div>
         </section>
