--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="HandheldFriendly" content="true" />
     <meta name="MobileOptimized" content="480" />
     <meta name="format-detection" content="telephone=no" />
-    <meta name="theme-color" content="#388E3C" />
+    <meta name="theme-color" content="#263238" />
     <meta property="og:url" content="https://seovale.com.br" />
     <link rel="canonical" href="https://seovale.com.br" />
     <link rel="stylesheet" href="css/reset.min.css" />
