Add informações no novo tema e removido código desnecessário.

--- a/index.html
+++ b/index.html
@@ -79,17 +79,19 @@
 
     <main>
          <section class="cover">
-             <div class="cover-wrapper">
-                <img class="cover-logo" src="img/seovale.svg" alt="logo seo vale"></img>
-                <h1 class="cover-title">Primeiro evento de <b class="fw-bold">SEO</b> no <b class="fw-bold">Vale do Paraíba</b>!</h2>
-                <p class="cover-info">8 de agosto de 2020</p>
-            </div>
-        </section>
+            <img class="cover-logo" src="img/seo-vale.svg" alt="logo seo vale"></img>
+            <h1 class="cover-title">
+              Maior evento de SEO do
+              <b class="fw-bold">Vale do Paraíba</b>!
+            </h1>
+            <p class="cover-subtitle">
+              <b class="fw-bold">08 /08/2020</b>
+              - Vagas limitadas!
+            </p>
 
-        <section class="section-dark">
-            <h2 class="sd-title">A primeira edição do SEO Vale</h2>
-            <p class="sd-content">O SEO Vale reúne centenas de profissionais de diversas áreas como Marketing, Programação e Design no Vale do Paraíba, com intuito de discutir sobre técnicas de Search Engine Optimization.</p>
-            <br/><p class="sd-content">Mais informações em breve! <b class="fw-bold">#seovale</b></p>
+            <p class="cover-text">A abertura da venda de ingressos será anunciada em breve pelas redes sociais.</p>
+            <br/>
+            <p class="cover-text">Siga e fique ligado! Os primeiros a comprar ganharão descontos e brindes exclusivos!</p>
         </section>
     </main>
 </body>
